--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -383,9 +383,9 @@ body {
 }
 
 .rating {
-  float: none;
   padding: 0;
   margin: 0;
+  float: right;
 }
 
 .rating > input { display: none; } 
@@ -490,10 +490,13 @@ body {
 
 #create_comment_window {
   position: fixed;
-  top: 25%;
-  left: 25%;
+  top: 100px;
+  margin: 5% auto; /* Will not center vertically and won't work in IE6/7. */
+  left: 0;
+  right: 0; 
   z-index: 100;
-  width: 50%;
+  width: 30%;
+  min-width: 350px;
   border: solid 2px black;
   background-color: white;
   padding: 10px;
