--- a/store/templates/store/card.html
+++ b/store/templates/store/card.html
@@ -33,7 +33,7 @@
       </a>
 
       <div>
-        <strong style="text-align: right;" class="price">S${{ post.price }}</strong>
+        <strong style="text-align: right;" class="pricE">S${{ post.price }}</strong>
       </div>
       <small class="date">
         {{ post.date_posted|date:'d F y'}}
