--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -8,10 +8,10 @@
   <span id="post__">  
   <img class="post_detail_image"  src="{{ post.image.url }}">
   <div class="star-ratings-css" style="font-size: 48px; width:200px;">
-  <div class="star-ratings-css-top" style="width: {{ object.feedback|calc_rating }}%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
+  <div class="star-ratings-css-top" style="width: {{ object.n_rating|multiply_by:0.2 }}%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
   <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
 </div>
- <h6>rating: {{ object.feedback|calc_rating|multiply_by:0.05 }} from {{ object.feedback|get_m|legit_count }} users</h6>
+ <h6>rating: {{ object.n_rating|multiply_by:0.01 }} from {{ object.feedback|get_m|legit_count }} users</h6>
  <h4>{{ object.n_subs }} Subscribers</h4>
 </span>
   <div class="media-body">
