--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -21,7 +21,7 @@
 <head>
 </head>
 
-<body>
+<body onload="get_order()">
   <div id="nav_bar" >
   <div class="topnav">
   <a style="padding-top: 7px;" class="left">
