--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -12,7 +12,7 @@
   <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
 </div>
  <h6>rating: {{ object.n_rating|multiply_by:0.01 }} from {{ object.feedback|get_m|legit_count }} users</h6>
- <h4>{{ object.n_subs }} Subscribers</h4>
+ <h2>{{ object.n_subs }} <img src="/static/store/sub_icon.gif" style="width:30px; height: 31px;"></h2>
 </span>
   <div class="media-body">
     <div class="article-metadata">
