--- a/store/static/store/main.css
+++ b/store/static/store/main.css
@@ -430,7 +430,8 @@ body {
   bottom: 50px;
 }
 
-#post__ h4 {
+#post__ h2 {
+  font-weight: 1000; 
   color: red;
   position: absolute;
   left: 7px;
@@ -507,3 +508,34 @@ body {
   padding: 10px;
 }
 
+#sub_icon {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  width: 25px;
+  height: 40px;
+}
+
+#sub_icon h5{
+  font-size: 10px;
+  font-size: 1vw;
+  text-align: center;
+  color: white;
+  font-weight: 1000;
+  display: block;
+  margin-left: -3.5px;
+}
+
+#sub_icon #number_icon {
+  display: block;
+  top: -5px;
+  right: -5px;
+  position: absolute;
+  border-radius: 50%;
+  /* box-shadow: 0px 0px 1px 2px rgba(160, 22, 12, 0.767); */
+  color: red;
+  width: 33px;
+  height: 33px;
+  background-color: red;
+}
