--- a/store/templates/store/card.html
+++ b/store/templates/store/card.html
@@ -2,7 +2,13 @@
 <div class="col-lg-3 col-md-6 mb-4">            
   <div id="course_card">            
       <div class="view overlay">
+        {% if user.is_authenticated %}
+              <a href="{% url 'post-detail' post.id %}" >
+            {% else %}
+              <a href="{% url 'login' %}" >
+            {% endif %}
         <img style="margin-left: -10px;" src="{{ post.image.url }}" alt="">
+        </a>
       </div>                                    
     <div>                
                   
@@ -33,7 +39,11 @@
       </a>
 
       <div>
+        {% if post.price < 0.01 %}
+        <img class= "pricE" src="/static/store/free.jpg" style="width: 35px; height: auto;">
+        {% else %}
         <strong style="text-align: right;" class="pricE">S${{ post.price }}</strong>
+        {% endif %}
       </div>
       <small class="date">
         {{ post.date_posted|date:'d F y'}}
