--- a/store/templates/store/interactive.html
+++ b/store/templates/store/interactive.html
@@ -2,5 +2,10 @@
 {% block content %}
 <div id="main">
     <h1>Welcome to Bra!nteractive!</h1>
-    </div>
+    {% for quiz in quizes %}
+        <li>
+        <a href="{% url 'quiz' quiz.post.id quiz.id %}">{{ quiz.title }}</a>
+        </li>
+    {% endfor %}
+</div>
 {% endblock content %}
