--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -90,6 +90,7 @@
   {% endif %}
   {% block content %}{% endblock %}
 </div>
+<div class="floating_left_icon"><a href="{% url 'result_page' %}"><img src="/static/store/exam.png" style="width: 55px;"></a></div>
 
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
