--- a/store/templates/store/post_detail.html
+++ b/store/templates/store/post_detail.html
@@ -36,6 +36,8 @@
         </div>
         <div>
           <a class="btn btn-default" href="{% url 'lesson_uploaded' object.id %}">Currently uploaded material</a>
+          <a class="btn btn-default" href="{% url 'interactive' object.id %}">START</a>
+        
         </div>    
       {% endif %}      
     {{ object.Lesson.title }}
