--- a/store/templates/store/quiz.html
+++ b/store/templates/store/quiz.html
@@ -3,13 +3,12 @@
 {% load extra_filter %}
 {% load mathfilters %}
 <div id="main">
-    <h2>{{ question.0.quiz }}</h2>
-    <br>
+    <legend> <h1>{{ question.0.quiz }}</h1> </legend>
     <ol>
+    <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
     {% for qn in question %}
     <li>
-    <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %}
         {{ qn.title }}
         <br>
         {% if qn.TYPE == 'text' %}
@@ -20,10 +19,10 @@
         {% endfor %}
         {% endif %}
         <br>
+    </li>
     {% endfor %}
     <button type="submit">submit</button>
     </form>
-    </li>
     </ol>
 </div>
 {% endblock content %}
