--- a/chat/templates/chat/thread.html
+++ b/chat/templates/chat/thread.html
@@ -35,7 +35,7 @@ if (loc.protocol == 'https:'){
     wsStart = 'wss://'
 }
 var endpoint = wsStart + loc.host + loc.pathname
-var socket = new ReconnectingWebSocket(endpoint)
+var socket = new WebSocket(endpoint)
 
 socket.onmessage = function(e) {
     console.log("message", e)
