--- a/store/templates/store/quiz_draft.html
+++ b/store/templates/store/quiz_draft.html
@@ -17,7 +17,12 @@
             <fieldset style="float: right; width: 35%;">
               <legend>Edit Quiz' Properties</legend>
               <span>{{ quiz_form.as_p }}</span>
-              <h6>(number refers to number of questions shown in a quiz <br> [max 20])</h6>
+              <h6>*time limit of quiz in seconds <br> *leave this as blank if there is no time limit</h6>
+              <br><input type="radio" name="remove" value="" checked="checked"><strong style="margin-left:10px;">Leave all results</strong>
+              <br><input type="radio" name="remove" value="mine"><strong style="margin-left:10px;">Remove your results</strong>
+              <br><input type="radio" name="remove" value="all"><strong style="margin-left:10px;">all results</strong>
+              <br>
+              <br><a href="{% url 'score_chart' quiz.post.id quiz.id %}" class="btn btn-success">view high scores</a>
             </fieldset>
             <fieldset style="float: left; width: 45%;  position: relative; display: block;">
                 <span style="position: absolute; bottom: 40px; right: 0px;">
@@ -66,7 +71,7 @@
                 }
               }
               </script>
-              <button class="btn btn-secondary" type="submit" >Confirm Changes</button>
+              <span style="z-index: 900; width:15%; position:fixed; left: 50%; bottom:5%;"><button class="btn btn-secondary" type="submit" >Confirm <br> Changes</button></span>
             </fieldset>
         </fieldset>
         </form>
