--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
 <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
 <head>
+    <link rel="icon" href="/static/store/logoIcon.png">
 </head>
 
 <body onload="get_order()">
